<resources>
    <string name="app_name">Safar</string>
    <string name="welcome">Welcome to Safar</string>
    <string name="user_name_hint">username</string>
    <string name="password_hint">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login_label">Log In</string>
    <string name="email_hint">email</string>
    <string name="register">register</string>
    <string name="visit_opt_itm">Visit Jordan</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="visit">visit</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourites</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="admin_login_item">Admin Login</string>
    <string name="admin_login">Login</string>
    <string name="view_all_users">View All Users</string>
    <string name="long_click_on_user_note">*Click on a user to perform actions</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="capital">Capital</string>
    <string name="neighbouring_countries">Neighbouring Countries</string>
    <string name="currency">Currency</string>
    <string name="quick_history">Quick History</string>
    <string name="jordan_quick_history">Jordan is a young state that occupies an ancient land,
        one that bears the traces of many civilizations. Separated from ancient Palestine by
        the Jordan River, the region played a prominent role in biblical history.\n\nThe ancient
        biblical kingdoms of Moab, Gilead, and Edom lie within its borders, as does the famed red
        stone city of Petra, the capital of the Nabatean kingdom and of the Roman province of
        Arabia Petraea. British traveler Gertrude Bell said of Petra, “It is like a fairy tale
        city, all pink and wonderful.” Part of the Ottoman Empire until 1918 and later a mandate
        of the United Kingdom, Jordan has been an independent kingdom since 1946.\n\nIt is among
        the most politically liberal countries of the Arab world, and, although it shares in the
        troubles affecting the region, its rulers have expressed a commitment to maintaining
        peace and stability.</string>
    <string name="japan_quick_history">Japan was settled about 35,000 years ago by Paleolithic
        people from the Asian mainland. At the end of the last Ice Age, about 10,000 years ago,
        a culture called the Jomon developed. Jomon hunter–gatherers fashioned fur clothing,
        wooden houses, and elaborate clay vessels. According to DNA analysis, the Ainu people
        may be descendants of the Jomon.\n\nThe second wave of settlement by the Yayoi people
        introduced metal–working, rice cultivation, and weaving to Japan. DNA evidence suggests
        that these settlers came from Korea.\n\nThe first era of recorded history in Japan is the
        Kofun (A.D. 250–538), which was characterized by large burial mounds or tumuli. The Kofun
        were headed by a class of aristocratic warlords; they adopted many Chinese customs
        and innovations.</string>
    <string name="canada_quick_history">The land that is now Canada was first home to nations of
        Indigenous peoples. In 1497 explorer John Cabot reached the east coast of present day
        Canada, and in 1534 Jacques Cartier explored the Gulf of St Lawrence and claimed the land
        for France.\n\nCartier established the first French settlement in 1541 at
        Charlesbourg-Royal, and by 1604 settlement of what is now known as New France begins.
        In 1627 The Company of One Hundred Associates is formed to help colonize New France.
        \n\nMeanwhile, Britain grants a Royal Charter in 1621 to Sir William Alexander giving him
        a barony that included Nova Scotia, Cape Breton Island, St John\'s Island (now Prince
        Edward Island), and the Gaspé Peninsula.</string>
    <string name="norway_quick_history">The earliest traces of human occupation in Norway are found
        along the coast, where the huge ice shelf of the last ice age first melted between 11,000
        and 8000 bce.\n\nThe oldest finds are stone tools dating from 9500 to 6000 bce, discovered
        in Finnmark in the north and Rogaland in the southwest. Theories of a “Komsa” type of
        stone-tool culture north of the Arctic Circle and a “Fosna” type from Trøndelag to Oslo
        Fjord were rendered obsolete in the 1970s. More recent finds along the entire coast
        revealed to archaeologists that the difference between the two can simply be ascribed to
        different types of tools and not to different cultures.\n\nCoastal fauna provided a means
        of livelihood for fishermen and hunters, who may have made their way along the southern
        coast about 10,000 bce when the interior was still covered with ice. It is now thought
        that these so-called “Arctic” peoples came from the south and followed the coast northward
        considerably later. Some may have come along the ice-free coast of the Kola Peninsula, but
        the evidence of this is still poor.</string>
    <string name="chile_quick_history">Before being discovered by the Europeans, Chile was inhabited
        by several tribes of Native Americans; including the Inca in the north and the Araucanian
        tribes in the south.In 1520 Ferdinand Magellan was the first European to see Chile. In 1540
        Pedro de Valdivia a Spanish conquistador came to Chile were he founded several cities,
        despite resistance from the Araucanians.\n\nOne of these cities he founded was Santiago,
        which is now Chile\'s capitol and largest city. In 1553 the Native Americans led several
        successful revolts against the Spanish conquerors, killing Valdivia and devastating most
        of the cities he founded. This lead to nearly 100 years of warfare. Eventually the Spanish
        dominated, but even then strife and conflicts continued for many more years.</string>
    <string name="uae_quick_history">The largest of these emirates, Abu Dhabi, which comprises more
        than three-fourths of the federation\’s total land area, is the centre of its oil industry
        and borders Saudi Arabia on the federation\’s southern and eastern borders. The port city of
        Dubai, located at the base of the mountainous Musandam Peninsula, is the capital of the
        emirate of Dubai and is one of the region\’s most vital commercial and financial centres,
        housing hundreds of multinational corporations in a forest of skyscrapers.\n\nThe smaller
        emirates of Sharjah, Umm al-Qaywayn, and Ra\ʾs Al-Khaymah also occupy the peninsula, whose
        protrusion north toward Iran forms the Strait of Hormuz linking the Persian Gulf to the Gulf
        of Oman. The federation\’s seventh member, Al-Fujayrah, faces the Gulf of Oman and is the
        only member of the union with no frontage along the Persian Gulf.</string>
    <string name="germany_quick_history">Germany, officially Federal Republic of Germany, German
        Deutschland or Bundesrepublik Deutschland, country of north-central Europe, traversing the
        continent\’s main physical divisions, from the outer ranges of the Alps northward across the
        varied landscape of the Central German Uplands and then across the North German Plain.
        \n\nOne of Europe\’s largest countries, Germany encompasses a wide variety of landscapes:
        the tall, sheer mountains of the south; the sandy, rolling plains of the north; the forested
        hills of the urbanized west; and the plains of the agricultural east.\n\nAt the spiritual
        heart of the country is the magnificent east-central city of Berlin, which rose phoenixlike
        from the ashes of World War II and now, after decades of partition, is the capital of a
        reunified Germany, and the Rhine River, which flows northward from Switzerland and is
        celebrated in visual art, literature, folklore, and song. </string>
    <string name="find_location">Find Location</string>
    <string name="find_public_places">Find Public Places</string>
    <string name="more_info">More Info</string>
    <string name="petra_more_info">PETRA … More Than A Wonder\n\nThe city of Petra, capital
        of the Nabataean Arabs, is one of the most famous archaeological sites in the world,
        it is Located 240 km south of the capital Amman and 120 km north of the red sea town of
        Aqaba, Petra the world wonder, is undoubtedly Jordan\'s most valuable
        treasure and greatest tourist attraction, and it is visited by tourists from all over
        the world.</string>
    <string name="wadi_rum_more_info">Wadi Rum has been inhabited by many human cultures since
        prehistoric times, with many cultures–including the Nabataeans–leaving their mark in the
        form of petroglyphs, inscriptions, and temple. In the West, Wadi Rum may be best known for
        its connection with British officer T. E. Lawrence, who passed through several times
        during the Arab Revolt of 1917–18. In the 1980s one of the rock formations in Wadi Rum,
        originally known as Jabal al-Mazmar (The Mountain of (the) Plague), was named \"The Seven
        Pillars of Wisdom,\" after Lawrence\'s book penned in the aftermath of the war, though the
        \'Seven Pillars\' referred to in the book have no connection with Rum.</string>
    <string name="aqaba_more_info">Aqaba\'s strategic location at the northeastern tip of the Red
        Sea between the continents of Asia and Africa, has made its port important over the course
        of thousands of years.\n\nThe ancient city was called Elath, adopted in Latin as Aela and in
        Arabic as Ayla. Its strategic location and proximity to copper mines made it a regional
        hub for copper production and trade in the Chalcolithic period. Aela became a bishopric
        under Byzantine rule and later became a Latin Catholic titular see after Islamic conquest
        around AD 650, when it became known as Ayla; the name Aqaba is late medieval. The Great
        Arab Revolt\'s Battle of Aqaba, depicted in the film Lawrence of Arabia,resulted in victory
        for Arab forces over the Ottoman defenders.</string>
    <string name="restaurants">Restaurants</string>
    <string name="custom_search">CUSTOM SEARCH</string>
    <string name="gyms">Gyms</string>
    <string name="coffee">Coffee Shops</string>
    <string name="Parks">Parks</string>
    <string name="hair_salon">Hair Salons</string>
    <string name="search">search</string>
    <string name="email">E-mail</string>
    <string name="enter_new_email">enter new email</string>
    <string name="username">Username</string>
    <string name="enter_new_username">enter new username</string>
    <string name="password">Password</string>
    <string name="new_password">new password</string>
    <string name="confirm_password_text_view">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="leave">Leave</string>
    <string name="current_password">current password</string>
    <string name="see_wikipedia">See Wikipedia</string>
    <string name="favourites">Favourites</string>
    <string name="sign_in_automatically">Sign In Automatically</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_safar">Rate Safar</string>
</resources>