<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_background_1"
        tools:context=".ui.RegisterActivity">

    <EditText
            android:id="@+id/email_edit_text"
            style="@style/EditTextsStyle"
            android:layout_above="@id/username_reg"
            android:background="#1677FF"
            android:hint="@string/email_hint" />

    <EditText
            android:id="@+id/username_reg"
            style="@style/EditTextsStyle"
            android:layout_above="@id/password1_reg"
            android:layout_marginTop="20dp"
            android:background="#1677FF"
            android:hint="@string/user_name_hint" />

    <EditText
            android:id="@+id/password1_reg"
            style="@style/EditTextsStyle"
            android:layout_above="@id/password2_reg"
            android:layout_marginTop="20dp"
            android:background="#1677FF"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    <EditText
            android:id="@+id/password2_reg"
            style="@style/EditTextsStyle"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="#1677FF"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    <Button
            android:id="@+id/register_btn"
            style="@style/ButtonsStyle"
            android:layout_below="@id/password2_reg"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/register" />

</RelativeLayout>