<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:background="@color/background_black">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/email"
                android:textColor="#2196F3"
                android:textSize="22sp" />

        <EditText
                android:id="@+id/new_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_text_view"
                android:gravity="center"
                android:hint="@string/enter_new_email"
                android:textColor="#BBBBBB"
                android:textColorHint="#BBBBBB" />

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/username"
                android:textColor="#2196F3"
                android:textSize="22sp" />

        <EditText
                android:id="@+id/new_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_text_view"
                android:gravity="center"
                android:hint="@string/enter_new_username"
                android:textColor="#BBBBBB"
                android:textColorHint="#BBBBBB" />

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/new_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/password"
                android:textColor="#2196F3"
                android:textSize="22sp" />

        <EditText
                android:id="@+id/new_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_password_text_view"
                android:gravity="center"
                android:hint="@string/new_password"
                android:textColor="#BBBBBB"
                android:textColorHint="#BBBBBB" />

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/confirm_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/confirm_password_text_view"
                android:textColor="#2196F3"
                android:textSize="22sp" />

        <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password_text_view"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:textColor="#BBBBBB"
                android:textColorHint="#BBBBBB" />

    </RelativeLayout>

</LinearLayout>