<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="200dp"
        android:minHeight="300dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:background="@color/background_black">

    <EditText
            android:id="@+id/profile_current_pass_et"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:textColor="@color/whiteTextView"
            android:textColorHint="@color/whiteTextView"
            android:textSize="25sp" />

    <EditText
            android:id="@+id/profile_new_pass_et"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/whiteTextView"
            android:textColorHint="@color/whiteTextView"
            android:textSize="25sp" />

    <EditText
            android:id="@+id/profile_confirm_new_pass_et"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/whiteTextView"
            android:textColorHint="@color/whiteTextView"
            android:textSize="25sp" />


</LinearLayout>